--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,11 @@ name = "pypi"
 django = "*"
 beautifulsoup4 = "*"
 bs4 = "*"
+dj-database-url = "*"
+gunicorn = "*"
+psycopg2 = "*"
+pytz = "*"
+whitenoise = "*"
 
 [dev-packages]
 
